--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="https://www.linkedin.com/in/david-bragg-5b23a1176/" target="_blank" class="social__link click">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/davidbr4gg" target="_blank" class="social__link click">
+          <a href="https://github.com/michelle01022012" target="_blank" class="social__link click">
             <i class="fab fa-github"></i>
           </a>
           <a href="./assets/David Bragg Resume.pdf" target="_blank" class="social__link click">
@@ -292,14 +292,14 @@
           </span>
         </a>
         <div class="footer__social--list">
-          <a href="https://github.com/davidbr4gg" class="
+          <a href="https://github.com/michelle01022012" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
         ">
             GitHub
           </a>
-          <a href="https://www.linkedin.com/in/david-bragg-5b23a1176/" target="_blank" class="
+          <a href="www.linkedin.com/in/michelle-anderson-pmp-scrum-fac-p-pm-iii-cor-iii-ahip-a270055" target="_blank" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
