commit linked in

--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
         ">
             GitHub
           </a>
-          <a href="www.linkedin.com/in/michelle-anderson-pmp-scrum-fac-p-pm-iii-cor-iii-ahip-a270055" Vanity URL name
+          <a href="www.linkedin.com/in/mranderson10" Vanity URL name
+           Vanity URL name
            target="_blank" class="
           footer__social--link
           link__hover-effect
