--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h3 class="modal__title modal__title--about">Here's a bit about me.</h3>
         <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer.</h4>
         <p class="modal__para">
-          I'm a 21 year-old Australian <b class="orange">frontend software engineer</b> with experience developing
+          I'm an enthusiastic Frontend Software Engineer with additional years of experience as a Senior Program/Project Manager for numerous large Corporations both within the Government and Private Sector. <b class="orange">frontend software engineer</b> with experience developing
           websites for top-tech companies like <b class="orange">Google</b> and <b class="orange">Canva</b>.
           <br>
           I currently solve extremely difficult engineering
@@ -315,7 +315,7 @@
         ">
             Contact
           </a>
-          <a href="./assets/David Bragg Resume.pdf" target="_blank" class="
+          <a href="./assets/Michelle Anderson Resume.pdf" target="_blank" class="
           footer__social--link
           link__hover-effect
           link__hover-effect--white
