--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer.</h4>
         <p class="modal__para">
           I'm an enthusiastic Frontend Software Engineer with additional years of experience as an IT Senior Program/Project Manager for numerous large Corporations both within the Government and Private Sector. <b class="orange">Frontend software engineer</b> with experience developing
-          websites for top-tech companies like <b class="orange">Google</b> and <b class="orange">Canva</b>.
+          websites for top-tech companies like <b class="orange">GSA</b> and <b class="orange">TBD</b>.
           <br>
           I currently solve extremely difficult engineering
           problems every day with <b class="orange">React</b>, <b class="orange">TypeScript</b> and <b
